change frontend to typescript and add venv and python-dotenv

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,12 @@ frontend/.yarn-integrity
 # ENV
 frontend/.env
 backend/.env
+
+# VENV
+backend/venv
+
+# pychache
+backend/__pycache__
+
+# .idea
+backend/.idea
