--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,4 +4,6 @@ uvicorn==0.24.0.post1
 python-dotenv==1.0.0
 pydantic-settings==2.0.3
 pyjwt[crypto]==2.8.0
-supabase==2.0.3
+sqlalchemy==2.0.23
+alembic~=1.12.1
+pydantic~=2.4.2
